Working lambda implementation