@@ -1,60 +1,36 @@
 plugins {
-    id 'java-library'
-    id 'application'
+    id 'java'
 }
 
 group 'se.billy'
 version '1.0-SNAPSHOT'
-
-ext.moduleName = 'musicserver'
-mainClassName = 'musicserver/se.billy.Main'
 
 repositories {
     jcenter()
 }
 
 dependencies {
-    compile 'io.javalin:javalin:2.0.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
-    compile 'org.slf4j:slf4j-simple:1.7.25'
+    // https://mvnrepository.com/artifact/org.asynchttpclient/async-http-client
+    compile group: 'org.asynchttpclient', name: 'async-http-client', version: '2.5.2'
+
+    // https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-core
+    compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.2.0'
+
+    compile 'com.amazonaws:aws-lambda-java-log4j2:1.0.0'
+
+    compile 'org.apache.logging.log4j:log4j-core:2.8.2'
+    compile 'org.apache.logging.log4j:log4j-api:2.8.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-run {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        jvmArgs = [
-                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                '--module-path', classpath.asPath,
-                '--module', mainClassName
-        ]
-        classpath = files()
+jar {
+    manifest {
+        attributes "Main-Class": "se.billy.Main"
     }
-}
 
-startScripts {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        classpath = files()
-        defaultJvmOpts = [
-                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                '--module-path', 'APP_HOME_LIBS',
-                '--module', mainClassName
-        ]
-    }
-}
-
-
-afterEvaluate {
-    compileJava {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = [
-                    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                    '--module-path', classpath.asPath,
-            ]
-            classpath = files()
-        }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
